	Known issues:
		- aeromodal with rigid-body motion needs work
		- deformable displacement joint initial assembly broken
		- modal joint initial assembly with initial modal disp. broken
	Bug fixes:
		- fixed "log" of total* family
		- fixed build of bufferstream* when sockets are not present
		- fixed build with RTAI
		- fixed output of drive callers (Reinhard Resch)

MBDyn 1.7.1
	Enhancements:
		- added ModalBody: body connected to modal node
		  (Reinhard Resch)
		- added sprintf function to math parser
		- added "single factor damping" to modal joint
		- added "Rayleigh damping" to modal joint
		  (suggested by Reinhard Resch)
		- added check for symmetric/diagonal mass/stiffness
		  matrices in modal joint
		- added initial distance as "current" in distance joint
		- added "buffer" stream drive and output element
		- added skeleton for embedding solver(s)
	Backward compatibility issues:
		- "proportional damping" in modal joint replaced by
		  "single factor damping"
	Known issues:
	Bug fixes:
		- fixed possibility to turn off output of aero elements
		- fixed structural forces in inverse dynamics
		  (Andrea Zanoni, noted by Davide Ivone)
		- fixed off-by-one bug in socket stream drive
		- fixed invalid memory access bug in viscoelastic
		  displacement joint Jacobian matrix initial assembly
		  (Reinhard Resch); assembly still needs work
		- fixed bug in EasyAnim post-processing of total joints
		- fixed bug in strain gage priv data (noted by Jason)
		- fixed EOF handling on arm
		- fixed check for body connected to modal node
		  (noted by Reinhard Resch)
		- fixed parsing of modal joint "origin node" in string format
		  (noted by Reinhard Resch)
		- fixed bug in deformable displacement joint Jacobian
		  matrix (Andrea Zanoni)
		- fixed bug in stream drive echo, writing old instead of new

MBDyn 1.7.0
	Enhancements:
		- (optional) new handling of math expressions and
		  "string" drive caller (With the contribution