@@ -26,6 +26,8 @@ MBDyn 1.X-Devel
 		- fixed build of bufferstream* when sockets are not present
 		- fixed build with RTAI
 		- fixed output of drive callers (Reinhard Resch)
+		- fixed read check for excessive channel number in fixed
+		  step driver (noted by Davide Ivone)
 
 MBDyn 1.7.1
 	Enhancements:
